--- a/app/templates/inventory/master_data/modules/products/modal_product.html
+++ b/app/templates/inventory/master_data/modules/products/modal_product.html
@@ -56,7 +56,7 @@
                                 <div class="relative">
                                     <select x-model="pForm.category_id"
                                         class="w-full bg-slate-50 border-0 text-slate-800 font-medium rounded-lg px-4 py-3 pr-8 focus:ring-2 focus:ring-indigo-500 focus:bg-white transition-all dark:bg-slate-800 dark:text-white appearance-none cursor-pointer">
-                                        <option value="">-- Chọn danh mục --</option>
+                                        <option value="">Chọn danh mục</option>
                                         <template x-for="c in categories" :key="c.id">
                                             <option :value="c.id" x-text="c.name"></option>
                                         </template>
