feat: Tạo modal sửa sản phẩm riêng biệt và sửa lỗi dropdown danh mục
- Tạo modal_edit_product.html riêng cho chức năng sửa sản phẩm
- Đơn giản hóa modal_product.html chỉ xử lý tạo mới
- Thêm logic JavaScript riêng cho modal sửa (editForm, openEditProductModal, submitEditProduct)
- Sửa lỗi dropdown danh mục không tự động chọn bằng cách tìm category_id từ category_name
- Cập nhật nút Sửa trong bảng sản phẩm để sử dụng modal mới

--- a/app/templates/inventory/master_data/index.html
+++ b/app/templates/inventory/master_data/index.html
@@ -153,6 +153,7 @@
             </div>
 
             {% include "inventory/master_data/modules/products/modal_product.html" %}
+            {% include "inventory/master_data/modules/products/modal_edit_product.html" %}
             {% include "inventory/master_data/modules/categories/modal_category.html" %}
             {% include "inventory/master_data/modules/warehouses/modal_warehouse.html" %}
 
