--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -454,10 +454,10 @@
 
 
   <script>
-    // --- 6. Logic Đếm ngược đến Tết Bính Ngọ (16/02/2026) ---
+    // --- 6. Logic Đếm ngược đến Tết Bính Ngọ (17/02/2026) ---
     function startTetCountdown() {
-      // Ngày đích: 16 tháng 2 năm 2026 lúc 00:00:00 (Tết bắt đầu)
-      const tetDate = new Date("February 16, 2026 00:00:00").getTime();
+      // Ngày đích: 17 tháng 2 năm 2026 lúc 00:00:00
+      const tetDate = new Date("February 17, 2026 00:00:00").getTime();
 
       const updateTimer = setInterval(() => {
         const now = new Date().getTime();
