--- a/app/templates/inventory/master_data/index.html
+++ b/app/templates/inventory/master_data/index.html
@@ -155,7 +155,9 @@
             {% include "inventory/master_data/modules/products/modal_product.html" %}
             {% include "inventory/master_data/modules/products/modal_edit_product.html" %}
             {% include "inventory/master_data/modules/categories/modal_category.html" %}
+            {% include "inventory/master_data/modules/categories/modal_edit_category.html" %}
             {% include "inventory/master_data/modules/warehouses/modal_warehouse.html" %}
+
 
         </div>
     </template>
